--- a/order-domain/pom.xml
+++ b/order-domain/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>dubbo-order</artifactId>
         <groupId>cn.newbeedaly</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>order-domain</artifactId>
@@ -11,5 +11,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>cn.newbeedaly</groupId>
+            <artifactId>order-api</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
