--- a/order-rpc/pom.xml
+++ b/order-rpc/pom.xml
@@ -13,6 +13,7 @@
     <name>order-rpc</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <pay.version>1.0.0</pay.version>
     </properties>
     <dependencies>
         <dependency>
@@ -88,6 +89,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.newbeedaly</groupId>
+            <artifactId>pay-rpc</artifactId>
+            <version>${pay.version}</version>
         </dependency>
     </dependencies>
 
