--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,17 @@
     </parent>
     <packaging>pom</packaging>
     <modules>
-        <module>order-api</module>
+        <module>order-adaptor</module>
         <module>order-rpc</module>
         <module>order-domain</module>
+        <module>order-deploy</module>
     </modules>
     <groupId>cn.newbeedaly</groupId>
     <artifactId>dubbo-order</artifactId>
     <version>${revision}</version>
     <name>dubbo-order</name>
     <properties>
+        <spring.boot.version>2.7.9</spring.boot.version>
         <java.version>8</java.version>
         <revision>1.0.0</revision>
         <pay.version>1.0.0</pay.version>
@@ -26,21 +28,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>cn.newbeedaly</groupId>
-                <artifactId>order-api</artifactId>
-                <version>${revision}</version>
-            </dependency>
-            <dependency>
-                <groupId>cn.newbeedaly</groupId>
-                <artifactId>order-rpc</artifactId>
-                <version>${revision}</version>
-            </dependency>
-            <dependency>
-                <groupId>cn.newbeedaly</groupId>
-                <artifactId>pay-rpc</artifactId>
-                <version>${pay.version}</version>
-            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -57,6 +44,11 @@
                         <artifactId>log4j-to-slf4j</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-parent</artifactId>
+                <version>${spring.boot.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
