--- a/order-domain/pom.xml
+++ b/order-domain/pom.xml
@@ -6,10 +6,12 @@
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+
     <artifactId>order-domain</artifactId>
-    <name>order-domain</name>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <pay.version>1.0.0</pay.version>
     </properties>
 
     <dependencies>
@@ -22,6 +24,11 @@
             <groupId>cn.newbeedaly</groupId>
             <artifactId>order-adaptor</artifactId>
             <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.newbeedaly</groupId>
+            <artifactId>pay-rpc</artifactId>
+            <version>${pay.version}</version>
         </dependency>
     </dependencies>
 
